--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "lucide-react": "^0.462.0",
     "next": "14.2.18",
     "react": "^18",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18",
     "recoil": "^0.7.7",
     "tailwind-merge": "^2.5.5",
