--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "chess.js": "^1.0.0-beta.8",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "framer-motion": "^11.15.0",
     "lucide-react": "^0.462.0",
     "next": "14.2.18",
     "react": "^18",
